--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
      <h1><U>Items Available</U></h1>
     <div class="card">
         <div id="card1">
-            <span>Product Name : Sun Glasses</span><br>
-            <span>Unit Price : $20</span><br>
-            <button id="AddToCart">Add to Cart</button>
+            <img src="./images/sunglasses.png" alt="Sunglasses"><br>
+            <span><U>Product Name</U> : <B>Sun Glasses</B></span><br>
+            <span><U>Unit Price</U> : $20</span><br>
+            <button id="AddToCart1">Add to Cart</button>
         </div>
          <div id="card2">
-            <span>Product Name : Face Mask</span><br>
-            <span>Unit Price : $10</span><br>
-            <button id="AddToCart">Add to Cart</button>
+            <img src="./images/facemask.png" alt="Face Mask"><br>
+            <span><U>Product Name</U> : <B>Face Mask</B></span><br>
+            <span><U>Unit Price</U> : $10</span><br>
+            <button id="AddToCart2">Add to Cart</button>
         </div>
          <div id="card3">
-            <span>Product Name : Sun Screen</span><br>
-            <span>Unit Price : $100</span><br>
-            <button id="AddToCart">Add to Cart</button>
+            <img src="./images/sunscreen.png" alt="Sun Screen"><br>
+            <span><U>Product Name</U> : <B>Sun Screen</B></span><br>
+            <span><U>Unit Price</U> : $100</span><br>
+            <button id="AddToCart3">Add to Cart</button>
         </div>
          <div id="card4">
-            <span>Product Name : Hat</span><br>
-            <span>Unit Price : $50</span><br>
-            <button id="AddToCart">Add to Cart</button>
+            <img src="./images/hat.png" alt="Hat"><br>
+            <span><U>Product Name</U> : <B>Hat</B></span><br>
+            <span><U>Unit Price</U> : $50</span><br>
+            <button id="AddToCart4">Add to Cart</button>
         </div>
     </div>
     <h1><U>Items in Cart</U></h1>
